--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
       "@nestjs/swagger": "^6.3.0",
       "@nestjs/typeorm": "^9.0.1",
       "bcrypt": "^5.1.0",
+      "class-transformer": "^0.5.1",
+      "class-validator": "^0.14.0",
       "dotenv": "^16.0.3",
       "mysql": "^2.18.1",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "rxjs": "^7.2.0",
+      "swagger-ui-express": "^4.6.2",
       "typeorm": "0.3.15"
    },
    "devDependencies": {
