--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
       "@nestjs/common": "^9.0.0",
       "@nestjs/config": "^2.3.1",
       "@nestjs/core": "^9.0.0",
+      "@nestjs/jwt": "^10.0.3",
+      "@nestjs/passport": "^9.0.3",
       "@nestjs/platform-express": "^9.0.0",
       "@nestjs/swagger": "^6.3.0",
       "@nestjs/typeorm": "^9.0.1",
@@ -32,6 +34,8 @@
       "class-validator": "^0.14.0",
       "dotenv": "^16.0.3",
       "mysql": "^2.18.1",
+      "passport": "^0.6.0",
+      "passport-jwt": "^4.0.1",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "rxjs": "^7.2.0",
